[package]
name = "hprtree"
version = "0.1.0"
edition = "2021"

description = "A Hilbert-Packed-R-Tree implementation for rust"
keywords = ["index", "spatial", "tree", "hilbert"]
categories = ["data-structures"]
license = "MIT"
repository = "https://github.com/Ya-hwon/hprtree"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
